<resources>
    <string name="app_name">Unfit 2 Fit</string>
    <string name="email_hint">ENTER EMAIL</string>
    <string name="password_hint">ENTER PASSWORD</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="need_an_account">Need An Account? Sign up</string>
    <string name="already_registered">Already Registered? Login</string>
    <string name="register_username_hint">USERNAME</string>
    <string name="register_full_name_hint">FULL NAME</string>

    <string-array name="goals">
        <item>Weight</item>
        <item>BMI</item>
        <item>Calorie Intake</item>
        <item>Calories Burnt</item>
        <item>Steps</item>
        <item>Waist</item>
    </string-array>
</resources>